tests/src/frontend/syntax/invalid/when_pattern4.sk
fun main(): void {
  print_raw(
    2 match {
    | i @ 2 if (i) -> "Pass\n"
    | _ -> "Fail\n"
    },
  )
}
